--- a/src/app/components/movie-list/movie-list.html
+++ b/src/app/components/movie-list/movie-list.html
@@ -1,6 +1,10 @@
-@for (movie of movies(); track movie.id){
-<div>
-  <h3>{{ movie.title }}</h3>
-  <p>{{ movie.release_date }}</p>
+<div class="container mx-auto p-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+    @for (movie of movies(); track movie.id){
+    <div class="border p-4">
+      <h3>{{ movie.title }}</h3>
+      <p>{{ movie.release_date }}</p>
+    </div>
+    }
+  </div>
 </div>
-}
