--- a/src/app/components/movie-list/movie-list.html
+++ b/src/app/components/movie-list/movie-list.html
@@ -7,4 +7,9 @@
     </a>
     }
   </div>
+  @if (currentPage() < totalPages()) {
+  <button (click)="loadMore()" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">
+    Load More
+  </button>
+  }
 </div>
