--- a/src/app/components/movie-list/movie-list.html
+++ b/src/app/components/movie-list/movie-list.html
@@ -1,3 +1,6 @@
+<div class="bg-tmdb-navy text-tmdb-cyan p-4 rounded-[--radius-card] shadow-card font-tmdb">
+  Design Tokens Test - TMDB Colors & Font Working!
+</div>
 <div class="container mx-auto p-4">
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     @for (movie of movies(); track movie.id){
