--- a/src/app/features/movies/components/movie-details/movie-details.html
+++ b/src/app/features/movies/components/movie-details/movie-details.html
@@ -1,12 +1,12 @@
 @if (movieDetails(); as movie) {
 <main>
   <div class="relative h-[500px] bg-cover bg-center"
-    [style.background-image]="'url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'">
+    [style.background-image]="'url(' + (movie.backdrop_path | tmdbImage: backdropSize) + ')'">
     <div class="absolute inset-0 bg-linear-to-t from-black/80 to-black/40"></div>
 
     <div class="relative z-10 container mx-auto px-4 h-full flex items-end pb-8">
       <div class="grid grid-cols-1 md:grid-cols-[auto_1fr] gap-8 items-end">
-        <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title"
+        <img [src]="movie.poster_path | tmdbImage: posterSize" [alt]="movie.title + ' poster'"
           class="w-64 rounded-[--radius-card] shadow-card-hover" />
 
         <div class="text-white space-y-4">
@@ -21,8 +21,11 @@
             <span class="text-lg">{{ movie.runtime }} min</span>
             <div class="flex items-center gap-2">
               <div
-                class="bg-tmdb-navy text-white rounded-full w-14 h-14 flex items-center justify-center font-bold shadow-card">
-                {{ (movie.vote_average * 10).toFixed(0) }}%
+                class="bg-tmdb-navy text-white rounded-full w-14 h-14 flex items-center justify-center font-bold shadow-card"
+                role="img"
+                [attr.aria-label]="'User rating: ' + (movie.vote_average | votePercentage)"
+              >
+                {{ movie.vote_average | votePercentage }}
               </div>
               <span class="text-sm text-gray-300">User<br />Score</span>
             </div>
